2011-04-20  Gavin Barraclough  <barraclough@apple.com>

        Build fix - revert accidental change.

        * wtf/Platform.h:

2011-04-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Add SAMPLING_FLAGS tool to DFG JIT.

        * bytecode/SamplingTool.h:
        (JSC::SamplingFlags::addressOfFlags):
        * dfg/DFGJITCompiler.cpp:
        (JSC::DFG::JITCompiler::setSamplingFlag):
        (JSC::DFG::JITCompiler::clearSamplingFlag):
        * dfg/DFGJITCompiler.h:
        * jit/JITInlineMethods.h:
        (JSC::JIT::setSamplingFlag):
        (JSC::JIT::clearSamplingFlag):
        * wtf/Platform.h:

2011-04-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 59022 - DFG JIT - Optimize branch-on-relational-compare

        If a relational compare (< or <=) is immediately followed by a branch,
        we can combine the two, avoiding generation of a boolean into a register.

        * assembler/MacroAssemblerX86Common.h:
        (JSC::MacroAssemblerX86Common::branch32):
        (JSC::MacroAssemblerX86Common::invert):
        (JSC::MacroAssemblerX86Common::commute):
        * dfg/DFGNode.h:
        (JSC::DFG::Node::adjustedRefCount):
        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compilePeepHoleBranch):
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT.h:
        (JSC::DFG::SpeculativeJIT::isJSConstantWithInt32Value):
        (JSC::DFG::SpeculativeJIT::detectPeepHoleBranch):

2011-04-20  Gavin Barraclough  <barraclough@apple.com>

        ARMv7 build fix II.

        * jit/JITOpcodes32_64.cpp:
        (JSC::JIT::softModulo):

2011-04-20  Gavin Barraclough  <barraclough@apple.com>

        ARMv7 build fix.

        * assembler/MacroAssemblerARM.h:
        (JSC::MacroAssemblerARM::test8):

2011-04-19  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Rationalize MacroAssembler branch methods